// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should call navigate back 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ECEEF2",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          Object {
            "backgroundColor": "#FF5532",
          },
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 4,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "white",
                  "fontSize": 14,
                  "fontWeight": "500",
                },
                undefined,
              ],
            ]
          }
        >
          Reported Items
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="IconButton"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {},
                    ],
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingVertical": 15,
      }
    }
    data={
      Array [
        Object {
          "__typename": "ContentComplaint",
          "id": "2",
          "person": Object {
            "__typename": "Person",
            "fullName": "Hayden Zieme",
            "id": "3",
          },
          "subject": Object {
            "__typename": "CommunityCelebrationItemComment",
          },
        },
        Object {
          "__typename": "ContentComplaint",
          "id": "4",
          "person": Object {
            "__typename": "Person",
            "fullName": "Mina Watsica",
            "id": "5",
          },
          "subject": Object {
            "__typename": "Story",
          },
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <MyRefreshControl
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderRadius": 8,
                "elevation": 4,
                "flexDirection": "row",
                "marginHorizontal": 16,
                "marginVertical": 8,
                "shadowColor": "#000000",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.3,
                "shadowRadius": 2,
              },
              Object {
                "alignItems": "flex-start",
                "backgroundColor": "#505256",
                "flexDirection": "column",
                "marginBottom": 8,
                "marginHorizontal": 20,
                "marginVertical": 0,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#A0A2A6",
                  "borderBottomWidth": 1,
                  "padding": 15,
                },
                Object {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#A0A2A6",
                    },
                  ]
                }
              >
                Reported By
                :
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#ffffff",
                    },
                  ]
                }
              >
                Hayden Zieme
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#A0A2A6",
                    },
                  ]
                }
              >
                Comment By
                :
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#ffffff",
                    },
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "paddingVertical": 15,
                },
                Object {},
              ]
            }
          />
          <View
            style={
              Array [
                Object {},
                Object {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <View
                accessible={true}
                focusable={true}
                isTVSelectable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID="ignoreButton"
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#52C5DC",
                        "height": 60,
                        "justifyContent": "center",
                      },
                      null,
                      Object {
                        "borderBottomLeftRadius": 8,
                        "borderRightColor": "#ffffff",
                        "borderRightWidth": 1,
                      },
                      null,
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#505256",
                        },
                        Object {
                          "fontFamily": "SourceSansPro-Regular",
                        },
                        Array [
                          Object {
                            "backgroundColor": "rgba(0,0,0,0)",
                            "color": "#ffffff",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 1.5,
                            "textAlign": "center",
                          },
                          Object {},
                        ],
                      ]
                    }
                  >
                    IGNORE
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <View
                accessible={true}
                focusable={true}
                isTVSelectable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID="deleteButton"
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#52C5DC",
                        "height": 60,
                        "justifyContent": "center",
                      },
                      null,
                      Object {
                        "borderBottomRightRadius": 8,
                      },
                      null,
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#505256",
                        },
                        Object {
                          "fontFamily": "SourceSansPro-Regular",
                        },
                        Array [
                          Object {
                            "backgroundColor": "rgba(0,0,0,0)",
                            "color": "#ffffff",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 1.5,
                            "textAlign": "center",
                          },
                          Object {},
                        ],
                      ]
                    }
                  >
                    DELETE
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderRadius": 8,
                "elevation": 4,
                "flexDirection": "row",
                "marginHorizontal": 16,
                "marginVertical": 8,
                "shadowColor": "#000000",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.3,
                "shadowRadius": 2,
              },
              Object {
                "alignItems": "flex-start",
                "backgroundColor": "#505256",
                "flexDirection": "column",
                "marginBottom": 8,
                "marginHorizontal": 20,
                "marginVertical": 0,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#A0A2A6",
                  "borderBottomWidth": 1,
                  "padding": 15,
                },
                Object {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#A0A2A6",
                    },
                  ]
                }
              >
                Reported By
                :
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#ffffff",
                    },
                  ]
                }
              >
                Mina Watsica
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#A0A2A6",
                    },
                  ]
                }
              >
                Story By
                :
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#ffffff",
                    },
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "paddingVertical": 15,
                },
                Object {},
              ]
            }
          />
          <View
            style={
              Array [
                Object {},
                Object {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <View
                accessible={true}
                focusable={true}
                isTVSelectable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID="ignoreButton"
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#52C5DC",
                        "height": 60,
                        "justifyContent": "center",
                      },
                      null,
                      Object {
                        "borderBottomLeftRadius": 8,
                        "borderRightColor": "#ffffff",
                        "borderRightWidth": 1,
                      },
                      null,
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#505256",
                        },
                        Object {
                          "fontFamily": "SourceSansPro-Regular",
                        },
                        Array [
                          Object {
                            "backgroundColor": "rgba(0,0,0,0)",
                            "color": "#ffffff",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 1.5,
                            "textAlign": "center",
                          },
                          Object {},
                        ],
                      ]
                    }
                  >
                    IGNORE
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <View
                accessible={true}
                focusable={true}
                isTVSelectable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID="deleteButton"
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#52C5DC",
                        "height": 60,
                        "justifyContent": "center",
                      },
                      null,
                      Object {
                        "borderBottomRightRadius": 8,
                      },
                      null,
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#505256",
                        },
                        Object {
                          "fontFamily": "SourceSansPro-Regular",
                        },
                        Array [
                          Object {
                            "backgroundColor": "rgba(0,0,0,0)",
                            "color": "#ffffff",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 1.5,
                            "textAlign": "center",
                          },
                          Object {},
                        ],
                      ]
                    }
                  >
                    DELETE
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`should refresh correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ECEEF2",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          Object {
            "backgroundColor": "#FF5532",
          },
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 4,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "white",
                  "fontSize": 14,
                  "fontWeight": "500",
                },
                undefined,
              ],
            ]
          }
        >
          Reported Items
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="IconButton"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {},
                    ],
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingVertical": 15,
      }
    }
    data={
      Array [
        Object {
          "__typename": "ContentComplaint",
          "id": "2",
          "person": Object {
            "__typename": "Person",
            "fullName": "Hayden Zieme",
            "id": "3",
          },
          "subject": Object {
            "__typename": "CommunityCelebrationItemComment",
          },
        },
        Object {
          "__typename": "ContentComplaint",
          "id": "4",
          "person": Object {
            "__typename": "Person",
            "fullName": "Mina Watsica",
            "id": "5",
          },
          "subject": Object {
            "__typename": "Story",
          },
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <MyRefreshControl
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderRadius": 8,
                "elevation": 4,
                "flexDirection": "row",
                "marginHorizontal": 16,
                "marginVertical": 8,
                "shadowColor": "#000000",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.3,
                "shadowRadius": 2,
              },
              Object {
                "alignItems": "flex-start",
                "backgroundColor": "#505256",
                "flexDirection": "column",
                "marginBottom": 8,
                "marginHorizontal": 20,
                "marginVertical": 0,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#A0A2A6",
                  "borderBottomWidth": 1,
                  "padding": 15,
                },
                Object {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#A0A2A6",
                    },
                  ]
                }
              >
                Reported By
                :
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#ffffff",
                    },
                  ]
                }
              >
                Hayden Zieme
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#A0A2A6",
                    },
                  ]
                }
              >
                Comment By
                :
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#ffffff",
                    },
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "paddingVertical": 15,
                },
                Object {},
              ]
            }
          />
          <View
            style={
              Array [
                Object {},
                Object {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <View
                accessible={true}
                focusable={true}
                isTVSelectable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID="ignoreButton"
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#52C5DC",
                        "height": 60,
                        "justifyContent": "center",
                      },
                      null,
                      Object {
                        "borderBottomLeftRadius": 8,
                        "borderRightColor": "#ffffff",
                        "borderRightWidth": 1,
                      },
                      null,
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#505256",
                        },
                        Object {
                          "fontFamily": "SourceSansPro-Regular",
                        },
                        Array [
                          Object {
                            "backgroundColor": "rgba(0,0,0,0)",
                            "color": "#ffffff",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 1.5,
                            "textAlign": "center",
                          },
                          Object {},
                        ],
                      ]
                    }
                  >
                    IGNORE
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <View
                accessible={true}
                focusable={true}
                isTVSelectable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID="deleteButton"
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#52C5DC",
                        "height": 60,
                        "justifyContent": "center",
                      },
                      null,
                      Object {
                        "borderBottomRightRadius": 8,
                      },
                      null,
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#505256",
                        },
                        Object {
                          "fontFamily": "SourceSansPro-Regular",
                        },
                        Array [
                          Object {
                            "backgroundColor": "rgba(0,0,0,0)",
                            "color": "#ffffff",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 1.5,
                            "textAlign": "center",
                          },
                          Object {},
                        ],
                      ]
                    }
                  >
                    DELETE
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderRadius": 8,
                "elevation": 4,
                "flexDirection": "row",
                "marginHorizontal": 16,
                "marginVertical": 8,
                "shadowColor": "#000000",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.3,
                "shadowRadius": 2,
              },
              Object {
                "alignItems": "flex-start",
                "backgroundColor": "#505256",
                "flexDirection": "column",
                "marginBottom": 8,
                "marginHorizontal": 20,
                "marginVertical": 0,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#A0A2A6",
                  "borderBottomWidth": 1,
                  "padding": 15,
                },
                Object {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#A0A2A6",
                    },
                  ]
                }
              >
                Reported By
                :
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#ffffff",
                    },
                  ]
                }
              >
                Mina Watsica
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#A0A2A6",
                    },
                  ]
                }
              >
                Story By
                :
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#ffffff",
                    },
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "paddingVertical": 15,
                },
                Object {},
              ]
            }
          />
          <View
            style={
              Array [
                Object {},
                Object {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <View
                accessible={true}
                focusable={true}
                isTVSelectable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID="ignoreButton"
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#52C5DC",
                        "height": 60,
                        "justifyContent": "center",
                      },
                      null,
                      Object {
                        "borderBottomLeftRadius": 8,
                        "borderRightColor": "#ffffff",
                        "borderRightWidth": 1,
                      },
                      null,
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#505256",
                        },
                        Object {
                          "fontFamily": "SourceSansPro-Regular",
                        },
                        Array [
                          Object {
                            "backgroundColor": "rgba(0,0,0,0)",
                            "color": "#ffffff",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 1.5,
                            "textAlign": "center",
                          },
                          Object {},
                        ],
                      ]
                    }
                  >
                    IGNORE
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <View
                accessible={true}
                focusable={true}
                isTVSelectable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID="deleteButton"
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#52C5DC",
                        "height": 60,
                        "justifyContent": "center",
                      },
                      null,
                      Object {
                        "borderBottomRightRadius": 8,
                      },
                      null,
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#505256",
                        },
                        Object {
                          "fontFamily": "SourceSansPro-Regular",
                        },
                        Array [
                          Object {
                            "backgroundColor": "rgba(0,0,0,0)",
                            "color": "#ffffff",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 1.5,
                            "textAlign": "center",
                          },
                          Object {},
                        ],
                      ]
                    }
                  >
                    DELETE
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`should render correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ECEEF2",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          Object {
            "backgroundColor": "#FF5532",
          },
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 4,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "white",
                  "fontSize": 14,
                  "fontWeight": "500",
                },
                undefined,
              ],
            ]
          }
        >
          Reported Items
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="IconButton"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {},
                    ],
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingVertical": 15,
      }
    }
    data={
      Array [
        Object {
          "__typename": "ContentComplaint",
          "id": "2",
          "person": Object {
            "__typename": "Person",
            "fullName": "Hayden Zieme",
            "id": "3",
          },
          "subject": Object {
            "__typename": "CommunityCelebrationItemComment",
          },
        },
        Object {
          "__typename": "ContentComplaint",
          "id": "4",
          "person": Object {
            "__typename": "Person",
            "fullName": "Mina Watsica",
            "id": "5",
          },
          "subject": Object {
            "__typename": "Story",
          },
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <MyRefreshControl
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderRadius": 8,
                "elevation": 4,
                "flexDirection": "row",
                "marginHorizontal": 16,
                "marginVertical": 8,
                "shadowColor": "#000000",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.3,
                "shadowRadius": 2,
              },
              Object {
                "alignItems": "flex-start",
                "backgroundColor": "#505256",
                "flexDirection": "column",
                "marginBottom": 8,
                "marginHorizontal": 20,
                "marginVertical": 0,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#A0A2A6",
                  "borderBottomWidth": 1,
                  "padding": 15,
                },
                Object {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#A0A2A6",
                    },
                  ]
                }
              >
                Reported By
                :
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#ffffff",
                    },
                  ]
                }
              >
                Hayden Zieme
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#A0A2A6",
                    },
                  ]
                }
              >
                Comment By
                :
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#ffffff",
                    },
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "paddingVertical": 15,
                },
                Object {},
              ]
            }
          />
          <View
            style={
              Array [
                Object {},
                Object {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <View
                accessible={true}
                focusable={true}
                isTVSelectable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID="ignoreButton"
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#52C5DC",
                        "height": 60,
                        "justifyContent": "center",
                      },
                      null,
                      Object {
                        "borderBottomLeftRadius": 8,
                        "borderRightColor": "#ffffff",
                        "borderRightWidth": 1,
                      },
                      null,
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#505256",
                        },
                        Object {
                          "fontFamily": "SourceSansPro-Regular",
                        },
                        Array [
                          Object {
                            "backgroundColor": "rgba(0,0,0,0)",
                            "color": "#ffffff",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 1.5,
                            "textAlign": "center",
                          },
                          Object {},
                        ],
                      ]
                    }
                  >
                    IGNORE
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <View
                accessible={true}
                focusable={true}
                isTVSelectable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID="deleteButton"
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#52C5DC",
                        "height": 60,
                        "justifyContent": "center",
                      },
                      null,
                      Object {
                        "borderBottomRightRadius": 8,
                      },
                      null,
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#505256",
                        },
                        Object {
                          "fontFamily": "SourceSansPro-Regular",
                        },
                        Array [
                          Object {
                            "backgroundColor": "rgba(0,0,0,0)",
                            "color": "#ffffff",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 1.5,
                            "textAlign": "center",
                          },
                          Object {},
                        ],
                      ]
                    }
                  >
                    DELETE
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderRadius": 8,
                "elevation": 4,
                "flexDirection": "row",
                "marginHorizontal": 16,
                "marginVertical": 8,
                "shadowColor": "#000000",
                "shadowOffset": Object {
                  "height": 2,
                  "width": 0,
                },
                "shadowOpacity": 0.3,
                "shadowRadius": 2,
              },
              Object {
                "alignItems": "flex-start",
                "backgroundColor": "#505256",
                "flexDirection": "column",
                "marginBottom": 8,
                "marginHorizontal": 20,
                "marginVertical": 0,
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderBottomColor": "#A0A2A6",
                  "borderBottomWidth": 1,
                  "padding": 15,
                },
                Object {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#A0A2A6",
                    },
                  ]
                }
              >
                Reported By
                :
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#ffffff",
                    },
                  ]
                }
              >
                Mina Watsica
              </Text>
            </View>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#A0A2A6",
                    },
                  ]
                }
              >
                Story By
                :
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#ffffff",
                    },
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
          <View
            style={
              Array [
                Object {
                  "paddingVertical": 15,
                },
                Object {},
              ]
            }
          />
          <View
            style={
              Array [
                Object {},
                Object {
                  "flexDirection": "row",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <View
                accessible={true}
                focusable={true}
                isTVSelectable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID="ignoreButton"
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#52C5DC",
                        "height": 60,
                        "justifyContent": "center",
                      },
                      null,
                      Object {
                        "borderBottomLeftRadius": 8,
                        "borderRightColor": "#ffffff",
                        "borderRightWidth": 1,
                      },
                      null,
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#505256",
                        },
                        Object {
                          "fontFamily": "SourceSansPro-Regular",
                        },
                        Array [
                          Object {
                            "backgroundColor": "rgba(0,0,0,0)",
                            "color": "#ffffff",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 1.5,
                            "textAlign": "center",
                          },
                          Object {},
                        ],
                      ]
                    }
                  >
                    IGNORE
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              <View
                accessible={true}
                focusable={true}
                isTVSelectable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "opacity": 1,
                  }
                }
                testID="deleteButton"
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#52C5DC",
                        "height": 60,
                        "justifyContent": "center",
                      },
                      null,
                      Object {
                        "borderBottomRightRadius": 8,
                      },
                      null,
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#505256",
                        },
                        Object {
                          "fontFamily": "SourceSansPro-Regular",
                        },
                        Array [
                          Object {
                            "backgroundColor": "rgba(0,0,0,0)",
                            "color": "#ffffff",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 1.5,
                            "textAlign": "center",
                          },
                          Object {},
                        ],
                      ]
                    }
                  >
                    DELETE
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`should render empty correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ECEEF2",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          Object {
            "backgroundColor": "#FF5532",
          },
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 4,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "white",
                  "fontSize": 14,
                  "fontWeight": "500",
                },
                undefined,
              ],
            ]
          }
        >
          Reported Items
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="IconButton"
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {},
                    ],
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Array [
        Array [
          Object {
            "backgroundColor": "#ffffff",
          },
          undefined,
        ],
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../assets/images/curiousIcon.png",
        }
      }
      style={
        Object {
          "flexShrink": 1,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#007398",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 24,
            "fontWeight": "300",
            "paddingTop": 10,
          },
        ]
      }
    >
      NO REPORTED ITEMS
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#505256",
            "fontSize": 16,
            "paddingHorizontal": 80,
            "paddingVertical": 10,
            "textAlign": "center",
          },
        ]
      }
    >
      No items have been reported.
    </Text>
  </View>
</View>
`;
